refactor: change coding style line separator

--- a/demo-spring-batch-app/src/main/resources/application.yml
+++ b/demo-spring-batch-app/src/main/resources/application.yml
@@ -1,1 +1,21 @@
-server:  port: 5678spring:  datasource:    driverClassName: com.mysql.cj.jdbc.Driver    url: jdbc:mysql://localhost:3306/customer_details    username: root    password: sandeep  jpa:    hibernate.ddl-auto: update    generate-ddl: true    show-sql: true  batch:    jdbc:      initialize-schema: ALWAYS    job:      enabled: false
+
+server:
+  port: 5678
+
+spring:
+  datasource:
+    driverClassName: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/customer_details
+    username: root
+    password: sandeep123
+
+  jpa:
+    hibernate.ddl-auto: update
+    generate-ddl: true
+    show-sql: true
+
+  batch:
+    jdbc:
+      initialize-schema: ALWAYS
+    job:
+      enabled: false
